# poker-coach

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/cards/pokerth/: SOURCE.md
calibration/: pokerth.json
scripts/: calibrate.py  debug_capture.py  fetch_pokerth_cards.py
src/poker_coach/: __init__.py  advisor.py  calibration.py  capture.py  cards.py  engine.py  main.py  ocr.py  parser.py  ranges.py  seat_reader.py  state.py  ui.py  window.py
tests/: test_calibration.py  test_card_recognizer.py  test_cards.py  test_engine.py  test_ranges.py  test_state.py
